--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                                 experiences.
 
                             </p>
-                            <a href="#0" class="btn btn--medium u-fullwidth" data-animate-el>Download CV</a>
+                            <a href="Vidhyasagar M.pdf" target="_blank" class="btn btn--medium u-fullwidth" download="Vidhyasagar M.pdf" data-animate-el>Download CV</a>
 
                         </div>
                     </div>
