--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <header class="s-header">
 
             <div class="header-mobile">
-                <span class="mobile-home-link"><a href="index.html">Luther.</a></span>
+                <span class="mobile-home-link"><a href="index.html">Vidhyasagar-Portfolio</a></span>
                 <a class="mobile-menu-toggle" href="#0"><span>Menu</span></a>
             </div>
 
